--- a/src/app.html
+++ b/src/app.html
@@ -13,6 +13,14 @@
 			href="/opensearch.xml"
 		/>
 
+                <!-- Google tag (gtag.js) -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-DWV43QK3P0"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+		  gtag('config', 'G-DWV43QK3P0');
+		</script>
 		<script>
 			// On page load or when changing themes, best to add inline in `head` to avoid FOUC
 			(() => {
