--- a/src/app.html
+++ b/src/app.html
@@ -62,6 +62,14 @@
 		<title>Open WebUI</title>
 
 		%sveltekit.head%
+
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-DWV43QK3P0"></script>
+		<script>
+		      window.dataLayer = window.dataLayer || [];
+		      function gtag(){dataLayer.push(arguments);}
+		      gtag('js', new Date());
+		      gtag('config', 'G-DWV43QK3P0');
+		</script>
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
