--- a/src/app.html
+++ b/src/app.html
@@ -65,6 +65,7 @@
 
 		%sveltekit.head%
 
+		<script defer src="https://umami.oiov.dev/script.js" data-website-id="5851aa2a-7a3e-4ce6-87aa-97de8a3d0872"></script>
 		<script async src="https://www.googletagmanager.com/gtag/js?id=G-DWV43QK3P0"></script>
 		<script>
 		      window.dataLayer = window.dataLayer || [];
